--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
           </div>
 
           <center>
-            <div class="trapezoiddiv" style="transform: scale(2.5); width:30%;">
+            <div class="trapezoiddiv" style="transform: scale(1.5); width:30vw;">
               <div class="trapezoid">
               </div>
             </div>
@@ -112,11 +112,11 @@
 
 <!--BLG Section 3 columns-->
 
-<table class="threecoloumntables" style="margin-top: 15px">
+<table class="threecoloumntables" style="margin-top: 0px">
 
   <tr>
     <td colspan="3">
-      <p class="resume-prompt" style="margin: 10px 0px;">
+      <p class="resume-prompt" style="margin: 0px 120px 15px;">
     <span style="font-family: 'oldenbury', serif; font-style: normal; font-weight: 900; font-size: 20pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #a7a6ba);
   background-size: 100%;
   background-repeat: repeat;
@@ -124,7 +124,7 @@
   -webkit-text-fill-color: transparent;
   -moz-background-clip: text;
   -moz-text-fill-color: transparent;">
-  Design transcends mere appearances &mdash; it's&nbsp;about how it functions.</span><br>
+  Design transcends mere appearances &mdash;<br>it's&nbsp;about how it functions.</span><br>
       </p>
     </td>
   </tr>
@@ -132,7 +132,7 @@
 
   <tr>
     <td colspan="3">
-      <p class="resume-prompt" style="margin-top: 2px; margin-bottom: 5px;">
+      <p class="resume-prompt" style="margin: 2px 120px 5px;">
       <!--I use critical design thinking and thorough research to create impactful designs that enhance users' experiences &ndash; bringing user interface, user experience and digital design at the forefront.
       I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
 I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
@@ -204,8 +204,8 @@ I employ critical design thinking and comprehensive research to craft impactful 
 
       </p></span>
         <figure>
-          <img alt="Carousel Bootstrap Third" src="images/blgwebstore-four.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1);">
-          <img alt="Carousel Bootstrap Third" src="images/blgwebstore.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
+          <img alt="BLG Merchandise Store v4" src="images/blgwebstore-four.jpg" class="portfolio_images oneflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1);">
+          <img alt="BLG Merchandise Store v3" src="images/blgwebstore.jpg" class="portfolio_images twoflowtwo" text-align="center" style="display: block; margin: auto; transform: scale(1.2);">
         </figure>
   </div>
 </td>
@@ -217,7 +217,87 @@ I employ critical design thinking and comprehensive research to craft impactful 
 </table>
 
 
-<!--BLG Section 2 columns-->
+<!-- Text Element: I devled -->
+
+
+<table class="threecoloumntables">
+<tr>
+  <td colspan="3">
+  <!--<p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
+      As a digital designer specializing in web, apps, and social media platforms, my aim is in crafting designs that captivate audiences endlessly. I believe </p>-->
+      <p class="resume-prompt" style="margin:20px 120px 0;">
+      <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.--> Like many, I delved into learning prompt engineering and AI tools, from ChatGPT to Photoshop Generative AI &ndash; leveraging their ability to elevate designs to new heights.</p>
+
+    <center>
+      <hr style="margin: 0; background-color: #efefef; width:450px; margin: 20px 60px 0px;">
+    </center>
+
+      <p class="resume-prompt " style="margin: 20px 120px 5px;">
+      I have skills in video creation and editing, integrating animation and sounds.  I collaborate with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
+  <td>
+</tr>
+
+</table>
+
+<table class="threecoloumntables">
+  <tr>
+
+    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+<!--      <div class="popup8" onclick="myFunction8()"> -->
+<!--        <span class="popuptext8" id="myPopup8">
+          <span class="portfolionexttwo popup7" onclick="myFunction7()">&#5176;</span>
+          <span class="portfolionexttwo popup9" onclick="myFunction9()">&#5171;</span>
+          <span class="close-btn-xy">&#10540;</span>
+
+          <div class="click-zoom">
+            <label>
+              <input type="checkbox">
+              <img alt="Beyond Video" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop blgbeyondone">
+              <video autoplay loop muted playsinline class="portfolio_images_pop blgbeyondtwo" width="96VW" height="auto" frameborder="0" >
+                <source src="images/blakes-madness.mp4" type="video/mp4">
+              </video>
+            </label>
+          </div>
+            <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">Blakes Madness XII</span></p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
+            <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
+          </span>
+        -->
+        <iframe alt="Beyond Video" src="https://www.youtube.com/embed/VqxkCjByGg4?rel=0&showinfo=0" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;"></iframe>
+        <p class="resume-prompt"><i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+        &nbsp;<a href="https://www.linkedin.com/posts/blglaw_blgbeyond-blgproud-innovation-activity-6757306592124776448-StrZ" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Beyond video</a>
+<!--      </div> -->
+    </td>
+
+
+  <td class="threebythreegrid" style="border: 5px solid #ffffff;">
+<!--    <div class="popup9" onclick="myFunction9()">-->
+<!--      <span class="popuptext9" id="myPopup9">
+        <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5176;</span>
+        <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5171;</span>
+        <span class="close-btn-xy">&#10540;</span>
+        <div class="click-zoom">
+          <label>
+            <input type="checkbox">
+          <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
+        </label>
+      </div>
+            <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Night with Shania Twain</span></p>
+            <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
+            <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
+          </span>
+-->
+        <iframe alt="Private Wealth video" src="https://www.youtube.com/embed/6-den0iVIdU" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
+        </iframe>
+        <p class="resume-prompt"><i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
+        &nbsp;<a href="https://www.blg.com/en/services/practice-areas/private-client" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Private Wealth video</a>
+<!--      </div>-->
+    </td>
+  </tr>
+</table>
+
+
+<!--BLG Section 2 columns General Brand Awareness-->
 
 <table class="threecoloumntables">
   <tr>
@@ -300,81 +380,11 @@ I employ critical design thinking and comprehensive research to craft impactful 
 </table>
 
 
-<table class="threecoloumntables">
-<tr>
-  <td colspan="3">
-  <!--<p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
-      As a digital designer specializing in web, apps, and social media platforms, my aim is in crafting designs that captivate audiences endlessly. I believe </p>-->
-      <p class="resume-prompt" style="margin:20px 0;">
-      <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.--> I delved into learning prompt engineering and AI tools, from ChatGPT to Photoshop Generative AI &ndash; leveraging their ability to elevate designs to new heights.</p>
-
-    <center>
-      <hr style="margin: 0; background-color: #efefef; width:94%; margin: 20px 0px;">
-    </center>
-
-      <p class="resume-prompt " style="margin-top: 20px; margin-bottom: 5px;">
-      I have skills in video creation and editing, integrating animation and sounds.  I collaborate with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
-  <td>
-</tr>
-
-</table>
-
-<table class="threecoloumntables">
-  <tr>
-
-    <td class="threebythreegrid" style="border: 5px solid #ffffff;">
-<!--      <div class="popup8" onclick="myFunction8()"> -->
-<!--        <span class="popuptext8" id="myPopup8">
-          <span class="portfolionexttwo popup7" onclick="myFunction7()">&#5176;</span>
-          <span class="portfolionexttwo popup9" onclick="myFunction9()">&#5171;</span>
-          <span class="close-btn-xy">&#10540;</span>
-
-          <div class="click-zoom">
-            <label>
-              <input type="checkbox">
-              <img alt="Beyond Video" src="images/HTML_Porfolio-2023-3b.jpg" class="portfolio_images_pop blgbeyondone">
-              <video autoplay loop muted playsinline class="portfolio_images_pop blgbeyondtwo" width="96VW" height="auto" frameborder="0" >
-                <source src="images/blakes-madness.mp4" type="video/mp4">
-              </video>
-            </label>
-          </div>
-            <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">Blakes Madness XII</span></p>
-            <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
-          </span>
-        -->
-        <iframe alt="Beyond Video" src="https://www.youtube.com/embed/VqxkCjByGg4?rel=0&showinfo=0" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;"></iframe>
-        <p class="resume-prompt"><i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
-        &nbsp;<a href="https://www.linkedin.com/posts/blglaw_blgbeyond-blgproud-innovation-activity-6757306592124776448-StrZ" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Beyond video</a>
-<!--      </div> -->
-    </td>
 
 
-  <td class="threebythreegrid" style="border: 5px solid #ffffff;">
-<!--    <div class="popup9" onclick="myFunction9()">-->
-<!--      <span class="popuptext9" id="myPopup9">
-        <span class="portfolionexttwo popup8" onclick="myFunction8()">&#5176;</span>
-        <span class="portfolionexttwo popup10" onclick="myFunction10()">&#5171;</span>
-        <span class="close-btn-xy">&#10540;</span>
-        <div class="click-zoom">
-          <label>
-            <input type="checkbox">
-          <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images_pop">
-        </label>
-      </div>
-            <p class="titleforpopup">2018 | Blakes Event eVite Design &mdash;<span style="font-style: italic;">A Night with Shania Twain</span></p>
-            <hr style="height:1px; color:#ffffff; margin: auto; width: 550px; opacity: 1;">
-            <p class="textforpopup">Event eVite design &mdash; includes front page and registration form.</p>
-          </span>
--->
-        <iframe alt="Private Wealth video" src="https://www.youtube.com/embed/6-den0iVIdU" class="portfolio_images" text-align="center" style="display: block; margin-left: auto; margin-right: auto; opacity: 1;">
-        </iframe>
-        <p class="resume-prompt"><i class="fa fa-link" aria-hidden="true" style="margin-top: 2%;"></i>
-        &nbsp;<a href="https://www.blg.com/en/services/practice-areas/private-client" target="_blank" style="text-decoration: underline; color: #58a6ff !important;">BLG Private Wealth video</a>
-<!--      </div>-->
-    </td>
-  </tr>
-</table>
+
+<!-- End of Video section-->
+<!-- About me with icons three columsn -->
 
 <table class="threecoloumntables">
    <tr>
@@ -384,15 +394,15 @@ I employ critical design thinking and comprehensive research to craft impactful 
        <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.I delved into learning prompt engineering and AI tools, harnessing their potential to elevate designs to new heights.--></p>
 
        <center>
-         <hr style="margin: 0 0 3px 0; background-color: #efefef; width:98%;">
-         <hr style="margin: 3px 0 0 0; background-color: #efefef; width:98%;">
+         <hr style="background-color: #dcdcdc; width:450px; margin: 5px 60px;">
+         <hr style="background-color: #dcdcdc; width:450px; margin: 5px 60px;">
       </center>
      </td>
    </tr>
 
 </table>
 
-<!-- About me with icons three columsn -->
+
 
 <table class="threecoloumntables wideaboutme">
   <tr>
@@ -426,8 +436,8 @@ I employ critical design thinking and comprehensive research to craft impactful 
     <td colspan="3" class="threebythreegrid">
 
       <center>
-      <hr style="margin: 0 0 3px 0; background-color: #efefef; width:98%;">
-      <hr style="margin: 3px 0 0 0; background-color: #efefef; width:98%;">
+      <hr style="background-color: #dcdcdc; width:450px; margin: 5px 60px;">
+      <hr style="background-color: #dcdcdc; width:450px; margin: 5px 60px;">
 
     </center>
 
@@ -436,7 +446,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
 
 
     <br>
- <p class="resume-prompt" style="margin-top:20px; margin-bottom: 5px;">
+ <p class="resume-prompt" style="margin: 20px 120px 0px;">
   Each project I undertake is a commitment to delivering impactful visual designs that function intuitively and effectively.
 </p>
 
@@ -629,7 +639,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
     <hr style="margin: 0; background-color: #efefef; width:98%; margin: 40px 0px;">
   </center>
 
-    <p class="resume-prompt" style="margin-top:20px; margin-bottom: 5px;">
+    <p class="resume-prompt" style="margin:20px 120px 0;">
       Prior to digital design, my background was in consumer products design and fashion, with experience in packaging and marketing &ndash; intertwining principles of aesthetics, functionality, user experience and market trends.</p>
   </td>
 </tr>
@@ -692,7 +702,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="2">
-      <p class="resume-prompt" style="margin:10px 0px 20px;">
+      <p class="resume-prompt" style="margin:10px 120px 20px;">
         For two and a half years, I was a part of The Walt Disney Company Canada's Disney OPA team, facilitating collaboration between the Canadian team, the U.S. Glendale office, and our Canadian licensees. My role focused on managing the product approval online portal and process to ensure seamless creation of consumer products that are in line with brand standards.</p>
     </td>
   </tr>
@@ -763,7 +773,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="2">
-      <p class="resume-prompt" style="margin: 20px 0px 5px">
+      <p class="resume-prompt" style="margin: 20px 120px 5px">
          <span style="font-weight:bolder; color:#333333"><u>Achievement</u>:</span> One of my designs was chosen for a Mickey T-shirt collection featured by UNIQLO in commemorating the opening of their Shanghai flagship store in 2016.  My design was sold at UNIQLO stores in Shanghai and across the United States between 2016 and 2017.</p>
     </td>
   </tr>
@@ -793,7 +803,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="3">
-        <p class="resume-prompt" style="margin: 10px 0px 20px;">
+        <p class="resume-prompt" style="margin: 10px 120px 20px;">
           Before my time with Disney, I gained over a decade of design experience working for various Canadian fashion companies and for National Bank Financial. In the autumn of 2012, I took a leap of faith and moved to Rome, Italy, eventually relocating to Milan to begin a new chapter working for Dolce & Gabbana.
         </p>
       </td>
@@ -876,14 +886,14 @@ I employ critical design thinking and comprehensive research to craft impactful 
   <tr>
     <td style="width: 700px; vertical-align: top;" colspan="3">
       <br>
-      <p class="resume-prompt" style="margin-top:15px; margin-bottom: 25px;">
+      <p class="resume-prompt" style="margin:15px 120px 25px;">
         My designs are rooted in understanding and catering to users' needs, preferences and behaviours, making me a distinctive and unique designer.</p>
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
         <center>
           <hr style="margin: 0 0 40px 0; background-color: #efefef; width:98%;">
        </center>
-      <p class="resume-prompt" style="margin: 15px 55px; color: #ababab;">
+      <p class="resume-prompt" style="margin: 15px 230px; color: #ababab;">
       Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. Don't hesitate to reach out and <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio.<br><br>
       <center>
       <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks again for visiting. Have a great day! ~</p>
