--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
 
 <!--Portfolio page Nav Menu-->
 
-<table class="threecoloumntableshamburger" style="margin-top: 25px;">
+<table class="threecoloumntableshamburger" id="backtotop" style="margin-top: 25px;">
   <tr>
     <td class="threebythreegridhamburger hamburger" style="position: relative; vertical-align: top; align: left; overflow: visible; z-index:10;">
       <div class="hamburger-menu">
@@ -40,8 +40,9 @@
           </label>
 
           <ul class="menu__box">
-            <li><a class="menu__item" href="EDWIN AU.pdf" target="_blank">Onepager / CV</a></li>
-            <li><a class="menu__item" href="#contact">Contact</a></li>
+            <li><a class="menu__item" href="#contact">CONTACT</a></li>
+            <li><a class="menu__item" href="#Portfolio">PORTFOLIO</a></li>
+            <li><a class="menu__item" href="EDWIN AU.pdf" target="_blank">RESUME</a></li>
             <!--<li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>-->
           </ul>
       </div>
@@ -51,7 +52,7 @@
 
       <!--monitor-->
 
-          <div class="container_one intro" id="backtotop">
+          <div class="container_one intro">
 
             <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
             <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
@@ -61,10 +62,10 @@
             <div class="container_two">
               <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1>
               <div class="container_three">
-                <h2 class="left button-row"><a href="#hello" target="" title="ONEPAGER"></a></h2>
-                <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
+                <h2 class="left button-row"><a href="#contact" title="CONTACT"></a></h2>
+                <h2 class="center button-row"><a href="#Portfolio" title="PORTFOLIO"></a></h2>
               <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
-                <h2 class="right_right button-row"><a href="#contact" title="CONTACT"></a></h2>
+                <h2 class="right_right button-row"><a href="EDWIN AU.pdf" target="_blank" title="RESUME"></a></h2>
               </div>
             </div>
             <div style="background: red;
@@ -112,7 +113,7 @@
 
 <!--BLG Section 3 columns-->
 
-<table class="threecoloumntables" style="margin-top: 0px">
+<table id="Portfolio" class="threecoloumntables" style="margin-top: 0px">
 
   <tr>
     <td colspan="3">
@@ -137,7 +138,7 @@
       I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
 I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
     </p>
-      <p class="portfolio-tabs-blue " style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
+      <p class="portfolio-tabs-blue" style="background: linear-gradient(45deg, #a7a6ba, #516395,  #516395, #516395, #516395, #dcdcdc); color: white; font-size: 15pt; font-family: 'lato'; margin-top: 25px; margin-bottom: 10px; padding: 5px 10px; border-top-right-radius: 25px;">
 
           2020 - 2024 | Digital Designer &ndash; Borden Ladner Gervais LLP
       </p>
@@ -896,7 +897,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
       <p class="resume-prompt" style="margin: 15px 230px; color: #ababab;">
       Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. Don't hesitate to reach out and <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio.<br><br>
       <center>
-      <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks again for visiting. Have a great day! ~</p>
+      <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks for visiting. Have a great day! ~</p>
     </center>
       </p><br><br><br>
     </td>
@@ -930,6 +931,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
 <!--<div class="totop" id="myP"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>-->
 
 
+<!--<div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i></a></div>-->
 
 
 </body>
