--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
           <ul class="menu__box">
             <li><a class="menu__item" href="#contact">CONTACT</a></li>
             <li><a class="menu__item" href="#Portfolio">PORTFOLIO</a></li>
-            <li><a class="menu__item" href="EDWIN AU.pdf" target="_blank">RESUME</a></li>
+            <li><a class="menu__item" href="EDWIN AU.pdf" target="_blank">R&Eacute;SUM&Eacute;	</a></li>
             <!--<li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>-->
           </ul>
       </div>
@@ -65,7 +65,7 @@
                 <h2 class="left button-row"><a href="#contact" title="CONTACT"></a></h2>
                 <h2 class="center button-row"><a href="#Portfolio" title="PORTFOLIO"></a></h2>
               <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
-                <h2 class="right_right button-row"><a href="EDWIN AU.pdf" target="_blank" title="RESUME"></a></h2>
+                <h2 class="right_right button-row"><a href="EDWIN AU.pdf" target="_blank" title="R&Eacute;SUM&Eacute;"></a></h2>
               </div>
             </div>
             <div style="background: red;
@@ -78,7 +78,7 @@
           </div>
 
           <center>
-            <div class="trapezoiddiv" style="transform: scale(1.5); width:30vw;">
+            <div class="trapezoiddiv" style="transform: scale(1.9); width:30vw;">
               <div class="trapezoid">
               </div>
             </div>
@@ -931,7 +931,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
 <!--<div class="totop" id="myP"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>-->
 
 
-<!--<div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i></a></div>-->
+<div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i></a></div>
 
 
 </body>
