--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
           </label>
 
           <ul class="menu__box">
-            <li><a class="menu__item" href="#contact">CONTACT</a></li>
-            <li><a class="menu__item" href="#Portfolio">PORTFOLIO</a></li>
+            <li><a class="menu__item contactme" href="#contact">CONTACT</a></li>
+            <li><a class="menu__item portfoliome" href="#Portfolio">PORTFOLIO</a></li>
             <li><a class="menu__item" href="EDWIN AU.pdf" target="_blank">R&Eacute;SUM&Eacute;	</a></li>
             <!--<li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/index.html">Home</a></li>-->
           </ul>
@@ -95,11 +95,13 @@
     </td>
 
     <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
+      <!--<a href="#contact" class="biopicture">-->
 <!--      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;"> -->
       <center>
       <img alt="Edwin bio picture" src="images/Edwin-bio-pic-web.jpg" class="headermred" style="border-radius: 500px; width: 70px; height: auto; margin-top: 5px; margin-bottom: 10px;">
       <p style="color: #333333; font-family: 'oldenbury', serif; font-size: 13pt; font-weight: bold; padding-left:3%; line-height: 1.1">Edwin Au<br><span style="font-weight: normal; font-size: 9.5pt; color: #666666; font-family: 'lato', san-serif">Digital Designer</span></p>
     </center>
+<!--  </a>-->
 
 <!--</a>-->
   </td>
@@ -117,7 +119,7 @@
 
   <tr>
     <td colspan="3">
-      <p class="resume-prompt" style="margin: 0px 120px 15px;">
+      <p class="resume-prompt" style="margin-top: 0px; margin-bottom: 15px;">
     <span style="font-family: 'oldenbury', serif; font-style: normal; font-weight: 900; font-size: 20pt; color: #444444; background-color: red; background-image: linear-gradient(45deg, #516395, #a7a6ba, #516395, #516395, #516395, #a7a6ba);
   background-size: 100%;
   background-repeat: repeat;
@@ -133,7 +135,7 @@
 
   <tr>
     <td colspan="3">
-      <p class="resume-prompt" style="margin: 2px 120px 5px;">
+      <p class="resume-prompt" style="margin-top: 2px; margin-bottom: 5px;">
       <!--I use critical design thinking and thorough research to create impactful designs that enhance users' experiences &ndash; bringing user interface, user experience and digital design at the forefront.
       I'm in the process of updating my portfolio with past accomplishments and recent projects. If you're curious to explore further, please don't hesitate to get in touch. I'd be delighted to share my complete portfolio with you.<br>-->
 I employ critical design thinking and comprehensive research to craft impactful designs that enrich users' experiences &ndash; positioning user interface, user experience, and digital design to the forefront.
@@ -226,14 +228,14 @@ I employ critical design thinking and comprehensive research to craft impactful 
   <td colspan="3">
   <!--<p class="resume-prompt" style="margin-top: 6%; margin-bottom: 3%;">
       As a digital designer specializing in web, apps, and social media platforms, my aim is in crafting designs that captivate audiences endlessly. I believe </p>-->
-      <p class="resume-prompt" style="margin:20px 120px 0;">
+      <p class="resume-prompt" style="margin-top:20px; margin-bottom: 0;">
       <!--  My expertise extends to tailoring designs and content for various devices, ranging from smartphones and tablets to larger monitors. What sets my work apart is the seamless fusion of passion and skill across layouts, graphics, product mapping, wireframing, typography, and colour.--> Like many, I delved into learning prompt engineering and AI tools, from ChatGPT to Photoshop Generative AI &ndash; leveraging their ability to elevate designs to new heights.</p>
 
     <center>
       <hr style="margin: 0; background-color: #efefef; width:450px; margin: 20px 60px 0px;">
     </center>
 
-      <p class="resume-prompt " style="margin: 20px 120px 5px;">
+      <p class="resume-prompt " style="margin-top:20px; margin-bottom: 5px;">
       I have skills in video creation and editing, integrating animation and sounds.  I collaborate with teams in brainstorming video ideas used for company campaigns, social media channels and webpages.</p><br>
   <td>
 </tr>
@@ -447,7 +449,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
 
 
     <br>
- <p class="resume-prompt" style="margin: 20px 120px 0px;">
+ <p class="resume-prompt" style="margin-top:20px; margin-bottom: 0;">
   Each project I undertake is a commitment to delivering impactful visual designs that function intuitively and effectively.
 </p>
 
@@ -640,7 +642,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
     <hr style="margin: 0; background-color: #efefef; width:98%; margin: 40px 0px;">
   </center>
 
-    <p class="resume-prompt" style="margin:20px 120px 0;">
+    <p class="resume-prompt" style="margin-top:20px; margin-bottom: 0;">
       Prior to digital design, my background was in consumer products design and fashion, with experience in packaging and marketing &ndash; intertwining principles of aesthetics, functionality, user experience and market trends.</p>
   </td>
 </tr>
@@ -703,7 +705,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="2">
-      <p class="resume-prompt" style="margin:10px 120px 20px;">
+      <p class="resume-prompt" style="margin-top: 10px; margin-bottom: 20px;">
         For two and a half years, I was a part of The Walt Disney Company Canada's Disney OPA team, facilitating collaboration between the Canadian team, the U.S. Glendale office, and our Canadian licensees. My role focused on managing the product approval online portal and process to ensure seamless creation of consumer products that are in line with brand standards.</p>
     </td>
   </tr>
@@ -774,7 +776,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="2">
-      <p class="resume-prompt" style="margin: 20px 120px 5px">
+      <p class="resume-prompt" style="margin-top:20px; margin-bottom: 5px;">
          <span style="font-weight:bolder; color:#333333"><u>Achievement</u>:</span> One of my designs was chosen for a Mickey T-shirt collection featured by UNIQLO in commemorating the opening of their Shanghai flagship store in 2016.  My design was sold at UNIQLO stores in Shanghai and across the United States between 2016 and 2017.</p>
     </td>
   </tr>
@@ -804,7 +806,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
   </tr>
   <tr>
     <td colspan="3">
-        <p class="resume-prompt" style="margin: 10px 120px 20px;">
+        <p class="resume-prompt" style="margin-top: 10px; margin-bottom: 20px;">
           Before my time with Disney, I gained over a decade of design experience working for various Canadian fashion companies and for National Bank Financial. In the autumn of 2012, I took a leap of faith and moved to Rome, Italy, eventually relocating to Milan to begin a new chapter working for Dolce & Gabbana.
         </p>
       </td>
@@ -887,14 +889,14 @@ I employ critical design thinking and comprehensive research to craft impactful 
   <tr>
     <td style="width: 700px; vertical-align: top;" colspan="3">
       <br>
-      <p class="resume-prompt" style="margin:15px 120px 25px;">
+      <p class="resume-prompt" style="margin-top: 15px; margin-bottom: 25px;">
         My designs are rooted in understanding and catering to users' needs, preferences and behaviours, making me a distinctive and unique designer.</p>
     <!--  <p class="resume-prompt">
         I've also worked for Dolce & Gabbana while living in Milan.</p>-->
         <center>
           <hr style="margin: 0 0 40px 0; background-color: #efefef; width:98%;">
        </center>
-      <p class="resume-prompt" style="margin: 15px 230px; color: #ababab;">
+      <p class="resume-prompt" style="margin: 15px 110px; color: #ababab;">
       Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. Don't hesitate to reach out and <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">contact&nbsp;me</a> to explore my comprehensive portfolio.<br><br>
       <center>
       <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks for visiting. Have a great day! ~</p>
@@ -931,7 +933,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
 <!--<div class="totop" id="myP"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>-->
 
 
-<div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i></a></div>
+<div class="totop"><a href="#backtotop" target="" title="Back to top"><i class="fa fa-angle-double-up"></i></a></div>
 
 
 </body>
