New Intro Monitor Animation

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
   	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/threegridpopup.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/intro_animation_transition.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -78,7 +79,7 @@
           </div>
 
           <center>
-            <div class="trapezoiddiv" style="transform: scale(1.9); width:30vw;">
+            <div class="trapezoiddiv" style="">
               <div class="trapezoid">
               </div>
             </div>
@@ -94,7 +95,7 @@
 
     </td>
 
-    <td class="threebythreegrid" style="width: 125px; height: 125px; overflow: visible;">
+    <td class="threebythreegrid introbiopictureanimation" style="width: 125px; height: 125px; overflow: visible;">
       <!--<a href="#contact" class="biopicture">-->
 <!--      <a href="https://edwinau.github.io/edwin-landing/index.html" style="margin-left: auto; margin-right: auto; border: none;"> -->
       <center>
