--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,16 @@
             <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
           <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
             <div class="container_two">
+              <p class="largemonitormimicnav">
+                <i class="fa fa-apple" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px;"></i>
+                <span class="navbarfontawesomefloatright">
+                  <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
+                  <i class="fa fa-wifi" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
+                  <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
+                  <i class="fa fa-search" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
+                  <span id="datetime"><span>
+                </span>
+              </p>
               <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1>
               <div class="container_three">
                 <h2 class="left button-row"><a href="#contact" title="CONTACT"></a></h2>
