added ohone notch

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,12 +62,12 @@
           <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
             <div class="container_two">
               <p class="largemonitormimicnav">
-                <i class="fa fa-apple" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px;"></i>
+                <i class="fa fa-apple" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt;"></i>
                 <span class="navbarfontawesomefloatright">
-                  <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
-                  <i class="fa fa-wifi" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
-                  <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
-                  <i class="fa fa-search" aria-hidden="true" style="color: #ffffff; padding: 5px;"></i>
+                  <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                  <i class="fa fa-wifi" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                  <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                  <i class="fa fa-search" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
                   <span id="datetime"><span>
                 </span>
               </p>
@@ -922,7 +922,18 @@ I employ critical design thinking and comprehensive research to craft impactful 
  <!--<img src="images/city_contact.png" class="imgs_contact" id="contactme" alt="city"> -->
 
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
-<div class="container_two contact" style="overflow: hidden;">
+<div class="container_two contact">
+  <p class="largephonemimicnav">
+    <span id="currentTime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
+
+    <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
+
+    <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
+      <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
+      <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
+      <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 25px 2px 2px;"></i>
+    </span>
+  </p>
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email ">edwinfcau@gmail.com</a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
