fixes timenavbar to float left -- Solved

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,17 +60,23 @@
             <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
             <img src="images/intrograss.jpg" class="img_intrograss" id="intrograss" alt="grass">
           <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
-            <div class="container_two">
-              <p class="largemonitormimicnav">
-                <i class="fa fa-apple" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt;"></i>
-                <span class="navbarfontawesomefloatright">
-                  <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
-                  <i class="fa fa-wifi" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
-                  <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
-                  <i class="fa fa-search" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
-                  <span id="datetime"><span>
+
+
+          <div class="container_two_timenavbar" style="width:100%; position:absolute;">
+            <p class="largemonitormimicnav">
+              <i class="fa fa-apple" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt;"></i>
+              <span class="navbarfontawesomefloatright">
+                <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                <i class="fa fa-wifi" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                <i class="fa fa-search" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
+                <span id="datetime">
                 </span>
-              </p>
+              </span>
+            </p>
+          </div>
+
+            <div class="container_two">
               <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN&nbsp;AU</a></h1>
               <div class="container_three">
                 <h2 class="left button-row"><a href="#contact" title="CONTACT"></a></h2>
@@ -79,6 +85,7 @@
                 <h2 class="right_right button-row"><a href="EDWIN AU.pdf" target="_blank" title="R&Eacute;SUM&Eacute;"></a></h2>
               </div>
             </div>
+
             <div style="background: red;
             background: -webkit-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Safari 5.1 to 6.0 */
             background: -o-linear-gradient(to bottom, rgba(21,21,21,0), rgba(21,21,21,1)); /* For Opera 11.1 to 12.0 */
