fixed time nav on phone and about me three columns

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,13 @@
           <div class="container_two_timenavbar" style="width:100%; position:absolute;">
             <p class="largemonitormimicnav">
               <i class="fa fa-apple" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
+              <i class="fa fa-windows" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: .5;"></i>
+              <a href="https://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: 1;"></i></a>
+              <a href="tel:+14168803791" title="+14168803791" title="whatsapp"><i class="fa fa-whatsapp" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: 1;"></i></a>
+<!--              <a href="https://www.instagram.com/edwin.fc.au" target="_blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true" style="color: #ffffff; padding: 5px 10px 5px 10px; font-size: 15pt; opacity: 1;"></i></a>
+-->
+
+
               <span class="navbarfontawesomefloatright">
                 <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
                 <i class="fa fa-wifi" aria-hidden="true" style="color: #ffffff; padding: 5px; font-size: 15pt;"></i>
@@ -406,17 +413,17 @@ I employ critical design thinking and comprehensive research to craft impactful 
 
 <table class="threecoloumntables wideaboutme">
   <tr>
-    <td class="threebythreegridaboutme">
+    <td class="threebythreegridaboutme aboutmeone">
       <img class="about-me-thumbnails" alt="About Me User Centric" src="images/AboutMe-Icon-3.png">
       <p>User-Centric</p>
     </td>
 
-    <td class="threebythreegridaboutme">
+    <td class="threebythreegridaboutme aboutmetwo">
      <img class="about-me-thumbnails" alt="About Me Problem Solve" src="images/AboutMe-Icon-2.png">
      <p>Problem&nbsp;Solver</p>
     </td>
 
-    <td class="threebythreegridaboutme">
+    <td class="threebythreegridaboutme aboutmethree">
       <img class="about-me-thumbnails" alt="About Me Leads by example" src="images/AboutMe-Icon-1.png">
       <p>Leads by Example</p>
     </td>
@@ -888,7 +895,7 @@ I employ critical design thinking and comprehensive research to craft impactful 
         <center>
           <hr style="margin: 0 0 40px 0; background-color: #efefef; width:98%;">
        </center>
-      <p class="resume-prompt finalmicetype" style="margin-top: 15px; margin-bottom: 15px; color: #ababab;">
+      <p class="resume-prompt" style="margin-top: 15px; margin-bottom: 15px; color: #ababab;">
       <!--Some projects not shown are bound by non-disclosure agreements and cannot be shared openly. -->Don't hesitate to <a href="mailto:edwinfcau@gmail.com" style="text-decoration: underline; color: blue;">reach&nbsp;out</a> to explore my comprehensive portfolio.<br><br>
       <center>
       <p style="font-family: 'oldenbury', serif; font-weight:bold; color: #333333; font-size: 13pt;">~ Thanks for visiting. Have a good day. ~</p>
@@ -903,19 +910,25 @@ I employ critical design thinking and comprehensive research to craft impactful 
  <!--<img src="images/city_contact.png" class="imgs_contact" id="contactme" alt="city"> -->
 
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
+
+  <div class="container_two_timenavbar" style="width:100%; position:absolute; top:5px;">
+    <p class="largephonemimicnav">
+      <span id="currentTime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
+
+      <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
+
+      <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
+        <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
+        <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
+        <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 25px 2px 2px;"></i>
+      </span>
+    </p>
+</div>
+
 <div class="container_two contact">
-  <p class="largephonemimicnav">
-    <span id="currentTime" style="color: #ffffff; font-size: 11pt; font-family: 'lato', sans-serif; padding: 5px 20px 5px 30px; filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;"></span>
 
-    <span class="phoneblacknotch"><span class="phoneblacknotchwithinnotch">&nbsp;</span></span>
-
-    <span class="navbarphonefontawesomefloatright" style="filter: drop-shadow(0px 0px 4px #000000); text-shadow: 0px 0px 10px #888888;">
-      <i class="fa fa-signal" aria-hidden="true" style="color: #ffffff; padding: 2px;"></i>
-      <span class="ltecss" style="color: #ffffff; padding: 2px;">LTE</span>
-      <i class="fa fa-battery-three-quarters" aria-hidden="true" style="color: #ffffff; padding: 2px 25px 2px 2px;"></i>
-    </span>
-  </p>
       <div class="container_contacts">
+
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email ">edwinfcau@gmail.com</a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
 		  <br class="imac displaynone"><br class="imac displaynone">
